--- a/app/src/main/res/layout/activity_areas.xml
+++ b/app/src/main/res/layout/activity_areas.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_principal"
+    android:id="@+id/activity_areas"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.listview.Principal">
+    tools:context="com.example.android.listview.Areas">
 
     <ListView
         android:layout_width="match_parent"
@@ -16,5 +16,5 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/lvOpciones" />
+        android:id="@+id/lvAreas" />
 </RelativeLayout>
