--- a/app/src/main/res/layout/activity_calculo_cuadrado.xml
+++ b/app/src/main/res/layout/activity_calculo_cuadrado.xml
@@ -15,7 +15,8 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentStart="true"
+        android:fillViewport="false">
 
         <LinearLayout
             android:layout_width="match_parent"
