--- a/app/src/main/res/layout/activity_cuadrado.xml
+++ b/app/src/main/res/layout/activity_cuadrado.xml
@@ -10,4 +10,28 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.android.listview.Cuadrado">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cuadrado"
+            android:id="@+id/textView7"
+            android:layout_gravity="center_horizontal"
+            android:phoneNumber="false"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/txtMostrar" />
+
+    </LinearLayout>
 </RelativeLayout>
