--- a/app/src/main/res/layout/activity_rectangulo.xml
+++ b/app/src/main/res/layout/activity_rectangulo.xml
@@ -10,4 +10,23 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".Rectangulo">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/rectangulo"
+            android:id="@+id/textView10"
+            android:allowUndo="false"
+            android:textSize="30dp"
+            android:layout_gravity="center_horizontal" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtMostrar" />
+    </LinearLayout>
 </RelativeLayout>
